# hp71-standalone

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generar_tablas.py  solve_ballistic.py
auth/: user_auth.cpp  user_auth.h
electron_payload/backend/: hp71_emulator  index.html  lcd.html
hp71_server/: CMakeLists.txt  main.cpp
keyboard/: keyboard_matrix.cpp  keyboard_matrix.h
linux_app/: main.js  package-lock.json  package.json  splash.html
linux_app/scripts/: build-deb-from-unpacked.sh
santa-barbara-deb/DEBIAN/: control
santa-barbara-deb/opt/santa-barbara/: hp71b.html  run.sh
saturn_core/: ballistic_engine.cpp  ballistic_engine.h  ballistic_tables.cpp  ballistic_tables.h  basic_engine.cpp  basic_engine.h  hardware_map.cpp  hardware_map.h  hp71_lcd.cpp  hp71_lcd.h  keyboard_matrix.cpp  keyboard_matrix.h  map_model.cpp  map_model.h  saturn_alu.cpp  saturn_alu.h  saturn_compare.cpp  saturn_compare.h  saturn_cpu.cpp  saturn_cpu.h  saturn_decoder.cpp  saturn_decoder.h  saturn_field.cpp  saturn_field.h  saturn_flags.cpp  saturn_flags.h  saturn_memory.cpp  saturn_memory.h  saturn_shift.cpp  saturn_shift.h  saturn_timer.cpp  saturn_timer.h
scripts/: build-linux-deb.sh  verify-linux-deb.sh
tables/: 105_table.csv  tables.csv  tables_backup_antes_chg5_8500.csv  tables_backup_antes_hea_chg6_calibrado.csv
web_ui/: index.html  keyboard.js
